# LinuxAusuContol

./: README.md  battery.py  cli.py  config.py  config.yaml  daemon.py  dbus_api.py  gui_adapter.py  install.sh  logger.py  monitor.py  power.py  profile_journal.py  profiles.py  pyproject.toml  requirements.txt  status.py
asus_control/: __init__.py  __main__.py  cli.py  config.py  daemon.py  dbus_api.py  gui_adapter.py  hardware_abstraction.py  logger.py  notifications.py  profile_journal.py  profiles.py  status.py  version.py
asus_control/gui/: __init__.py  battery_widget.py  dashboard.py  fan_widget.py  logs_window.py  main_window.py  profile_widget.py  resources_widget.py  settings_window.py  temperatures_widget.py  view_model.py
asus_control/gui/translations/: README.md  asus-control_en.ts  asus-control_ru.qm  asus-control_ru.ts
config/: config.yaml
systemd/: asus-control.service  asus-control.timer  org.asuslinux.Control.conf  org.asuslinux.control.policy
